--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <a href="1.docx"><img src="https://e1.pngegg.com/pngimages/125/420/png-clipart-button-ui-microsoft-office-2016-microsoft-word-logo-art.png" width="100px" height="100px" />
     <pre>ТАВСИЯҲОИ ФАРДӢ 
       БО ОМӮЗИШИ МОШИНСОЗӢ 
-      ТЕХНИКА ВА МУШКИЛОТ</pre>
+      МЕТОДҲО ВА МУШКИЛОТ</pre>
     Скачать
     </a>
   </div>
