meta name keywords

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="keywords" content="articlesselcitra, nekruzsadriddinzoda, sadriddinzoda.com">
   <link rel="stylesheet" href="style.css" />
   <title>Articles</title>
 </head>
@@ -33,6 +34,11 @@
     </a>
   </div>
     </div>
+  <main>
+    articlesselcitraarticlesselcitra
+    articlesselcitraarticlesselcitra
+    articlesselcitraarticlesselcitra
+  </main>
 </body>
 
 </html>
